deployment/mcp_gateway/kuadrant-operator.yaml
apiVersion: v1
kind: Namespace
metadata:                                                    
  name: kuadrant-system
